--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <title>InvestDice</title>
+  <title>Super Dice</title>
   <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
   <link href="https://bootswatch.com/slate/bootstrap.min.css" rel="stylesheet">
